# YC-ATLAS-Backend

./: .env.example  README.md  comapneydata.py  main.py  pyproject.toml  render.yaml  requirements.txt  run.py
app/: __init__.py  main.py
app/api/: __init__.py  models.py
app/api/routes/: __init__.py  companies.py  search.py
app/core/: __init__.py  config.py
app/db/: __init__.py  company_data.py
app/services/: __init__.py  openai_service.py  pinecone_service.py  prompts.py
app/utils/: __init__.py  data_normalization.py
services/: openai_service.py  pinecone_service.py
utils/: data_normalization.py
